--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,15 @@ plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'org.sonarqube' version '3.3'
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "Sample-Sonar-App"
+    }
 }
